--- a/web/package.json
+++ b/web/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251011.0",
+    "@types/papaparse": "^5.3.16",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^5.0.4",
