--- a/web/package.json
+++ b/web/package.json
@@ -12,6 +12,7 @@
     "firebase": "^10.13.0",
     "ical.js": "^2.0.0",
     "papaparse": "^5.4.1",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1"
